k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-chat
  namespace: demo-chat
spec:
  selector:
    app: demo-chat
  ports:
    - port: 8000
      targetPort: http
      name: http
